test/fail/duplicate-import5.mo
import Mixin "duplicate-import/MixinA";
import Mixin "duplicate-import/MixinB";
